--- a/Resources/Private/Language/locallang_csh_tx_audiogallery_domain_model_filteritem.xml
+++ b/Resources/Private/Language/locallang_csh_tx_audiogallery_domain_model_filteritem.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <T3locallang>
     <meta type="array">
-        <description>Context Sensitive Help (CSH) for table tx_audiogallery_domain_model_category</description>
+        <description>Context Sensitive Help (CSH) for table tx_audiogallery_domain_model_filteritem</description>
         <type>CSH</type>
-        <csh_table>tx_audiogallery_domain_model_category</csh_table>
+        <csh_table>tx_audiogallery_domain_model_filteritem</csh_table>
     </meta>
     <data type="array">
         <languageKey index="default" type="array">
-			<label index="name.description">Name of category</label>
+			<label index="name.description">Name of filter item</label>
 		</languageKey>
     </data>
 </T3locallang>
