--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -11,9 +11,12 @@
 			<label index="tx_audiogallery_domain_model_entry.author">Author</label>
 			<label index="tx_audiogallery_domain_model_entry.audio_file_path">Audio File Path</label>
 			<label index="tx_audiogallery_domain_model_entry.preview_image_path">Preview Image Path</label>
-			<label index="tx_audiogallery_domain_model_entry.category">Category</label>
-			<label index="tx_audiogallery_domain_model_category">Category</label>
-			<label index="tx_audiogallery_domain_model_category.name">Name</label>
+			<label index="tx_audiogallery_domain_model_entry.filter_item">Filter Item</label>
+			<label index="tx_audiogallery_domain_model_filteritem">Filter Item</label>
+			<label index="tx_audiogallery_domain_model_filteritem.name">Name</label>
+			<label index="tx_audiogallery_domain_model_filtergroup">Filter Group</label>
+			<label index="tx_audiogallery_domain_model_filtergroup.name">Name</label>
+			<label index="tx_audiogallery_domain_model_filtergroup.filter_item">Filter Item</label>
 		</languageKey>
 	</data>
 </T3locallang>
