* make jwplayer single view for facebook configureable * added flexform for jwplayer single view
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49408 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -17,6 +17,8 @@
 			<label index="tx_audiogallery_domain_model_filtergroup">Filter Group</label>
 			<label index="tx_audiogallery_domain_model_filtergroup.name">Name</label>
 			<label index="tx_audiogallery_domain_model_filtergroup.filter_item">Filter Item</label>
+			
+			<label index="flexform.audio_gallery.field.jwplayer_singlepage">JWPlayer SingleView (for Facetbook)</label>
 		</languageKey>
 	</data>
 </T3locallang>
