--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -6,17 +6,18 @@
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
-			<label index="tx_audiogallery_domain_model_entry">Entry for audio file</label>
-			<label index="tx_audiogallery_domain_model_entry.title">Title of audio record</label>
-			<label index="tx_audiogallery_domain_model_entry.author">Author of audio record</label>
-			<label index="tx_audiogallery_domain_model_entry.audio_file_path">Path to audio file</label>
-			<label index="tx_audiogallery_domain_model_entry.preview_image_path">Path to preview image</label>
-			<label index="tx_audiogallery_domain_model_entry.filter_item">Item for filter group</label>
-			<label index="tx_audiogallery_domain_model_filteritem">Filter item for audios</label>
-			<label index="tx_audiogallery_domain_model_filteritem.name">Name of filter item</label>
-			<label index="tx_audiogallery_domain_model_filtergroup">Container for categories</label>
-			<label index="tx_audiogallery_domain_model_filtergroup.name">Name of filter</label>
-			<label index="tx_audiogallery_domain_model_filtergroup.filter_item">filterItem</label>
+			<label index="tx_audiogallery_domain_model_entry">Eintrag für Audio-Datei</label>
+			<label index="tx_audiogallery_domain_model_entry.title">Titel der Audio-Datei</label>
+			<label index="tx_audiogallery_domain_model_entry.author">Autor der Audio-Datei</label>
+			<label index="tx_audiogallery_domain_model_entry.audio_file_path">Pfad zur Audio-Datei</label>
+			<label index="tx_audiogallery_domain_model_entry.preview_image_path">Pfad zu Vorschaubild</label>
+			<label index="tx_audiogallery_domain_model_entry.filter_item">Element einer Filtergruppe</label>
+			<label index="tx_audiogallery_domain_model_filteritem">Filterelement für Audio-Dateien</label>
+			<label index="tx_audiogallery_domain_model_filteritem.name">Name des Filterelements</label>
+			<label index="tx_audiogallery_domain_model_filtergroup">Gruppe von Filterelementen</label>
+			<label index="tx_audiogallery_domain_model_filtergroup.name">Name einer Filtergruppe</label>
+			<label index="tx_audiogallery_domain_model_filtergroup.filter_item">Element einer Filtergruppe</label>
+			<label index="all">Alle</label>
 		</languageKey>
 	</data>
 </T3locallang>
