--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -11,12 +11,12 @@
 			<label index="tx_audiogallery_domain_model_entry.author">Author</label>
 			<label index="tx_audiogallery_domain_model_entry.audio_file_path">Audio File Path</label>
 			<label index="tx_audiogallery_domain_model_entry.preview_image_path">Preview Image Path</label>
-			<label index="tx_audiogallery_domain_model_entry.filter_item">Filter Item</label>
-			<label index="tx_audiogallery_domain_model_filteritem">Filter Item</label>
-			<label index="tx_audiogallery_domain_model_filteritem.name">Name</label>
-			<label index="tx_audiogallery_domain_model_filtergroup">Filter Group</label>
-			<label index="tx_audiogallery_domain_model_filtergroup.name">Name</label>
-			<label index="tx_audiogallery_domain_model_filtergroup.filter_item">Filter Item</label>
+			<label index="tx_audiogallery_domain_model_entry.filter_one_item">Filter One Item</label>
+			<label index="tx_audiogallery_domain_model_entry.filter_two_item">Filter Two Item</label>
+			<label index="tx_audiogallery_domain_model_filteroneitem">Filter One Item</label>
+			<label index="tx_audiogallery_domain_model_filteroneitem.name">Name</label>
+			<label index="tx_audiogallery_domain_model_filtertwoitem">Filter Two Item</label>
+			<label index="tx_audiogallery_domain_model_filtertwoitem.name">Name</label>
 			<label index="flexform.entry.field.pagination_itemsPerPage">Entries per page</label>
 			<label index="flexform.picture.field.pagination_insertAbove">Display pagination above</label>
 			<label index="flexform.picture.field.pagination_insertBelow">Display pagination below</label>
