make single view on other page possible added more content to open graph meta tags
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49460 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -20,6 +20,9 @@
 			<label index="flexform.entry.field.pagination_itemsPerPage">Entries per page</label>
 			<label index="flexform.picture.field.pagination_insertAbove">Display pagination above</label>
 			<label index="flexform.picture.field.pagination_insertBelow">Display pagination below</label>
+			
+			<label index="flexform.audio_gallery.field.singleView">Gallery single view page (for facebook)</label>
+			<label index="flexform.audio_gallery.field.jwPlayerRedirect">Page with jwplayer redirect (for facebook)</label>
 		</languageKey>
 	</data>
 </T3locallang>
