--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -23,6 +23,7 @@
 			<label index="flexform.audio_gallery.field.filters_display">Display filters</label>
 			<label index="flexform.audio_gallery.field.singleView">Gallery single view page (for facebook)</label>
 			<label index="flexform.audio_gallery.field.jwPlayerRedirect">Page with jwplayer redirect (for facebook)</label>
+			<label index="flexform.audio_gallery.field.renderAddthisInclude">Include addThis JS Code</label>
 		</languageKey>
 	</data>
 </T3locallang>
