implemented links to list view and participation page in detail view, implemented buttons
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49615 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -25,6 +25,14 @@
 			<label index="flexform.audio_gallery.field.singleView">Gallery single view page (for facebook)</label>
 			<label index="flexform.audio_gallery.field.jwPlayerRedirect">Page with jwplayer redirect (for facebook)</label>
 			<label index="flexform.audio_gallery.field.renderAddthisInclude">Include addThis JS Code</label>
+			
+			
+			<label index="flexform.audio_gallery.field.participatePage">Page with participation form.</label>
+			<label index="flexform.audio_gallery.field.listViewPage">Page for the list view.</label>
+			
+			<label index="flexform.sheets.list">Listenansicht</label>
+			<label index="flexform.sheets.single">Einzelansicht</label>
+
 		</languageKey>
 	</data>
 </T3locallang>
