--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -13,7 +13,9 @@
 			<label index="tx_audiogallery_domain_model_entry.preview_image_path">Preview Image Path</label>
 			<label index="tx_audiogallery_domain_model_entry.single_view_image_path">Single View Image Path</label>
 			<label index="tx_audiogallery_domain_model_entry.filter_one_item">Filter One Item</label>
+			<label index="tx_audiogallery_domain_model_entry.filter_one_item.I.0"></label>
 			<label index="tx_audiogallery_domain_model_entry.filter_two_item">Filter Two Item</label>
+			<label index="tx_audiogallery_domain_model_entry.filter_two_item.I.0"></label>
 			<label index="tx_audiogallery_domain_model_filteroneitem">Filter One Item</label>
 			<label index="tx_audiogallery_domain_model_filteroneitem.name">Name</label>
 			<label index="tx_audiogallery_domain_model_filtertwoitem">Filter Two Item</label>
